--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Abigail Estervil</title>
     <meta name="keywords" content="who is, student, Abigail Estervil, contact, number, email, projects, portfolio">
     <meta name="description" content="I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game.">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <h1>Home</h1>
 <body>
-    Hello
+    <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner."
+        
+    </p>
 </body>
 </html>
