--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,13 @@
     <title>Portfolio - Abigail Estervil</title>
     <meta name="keywords" content="who is, student, Abigail Estervil, contact, number, email, projects, portfolio">
     <meta name="description" content="I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game. Here is how to contact me, and/or who I am to expect.">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Portfolio</h1>
-    
+    <p>"My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game."
+        
+    </p>
 </body>
 </html>
