Used more codes and added more information

--- a/about-me.html
+++ b/about-me.html
@@ -9,10 +9,30 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>About Me</h1>
+
 <body>
-    <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game. Here is how to contact me, and/or who I am to expect."
-        
+  <h1 style="text-align: center">
+    About Me
+</h1>  
+<hr>
+    <p>
+    💼 I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game. Here is how to contact me, and/or who I am to expect.
     </p>
+<ul>
+<li>Dancing</li>
+<li>Singing</li>
+<li>Music</li>
+<li>Playing my Uke</li>
+<li>Volleyball</li>
+<li>Reading</li>
+<li>Writing</li>
+<li>Typing</li>
+</ul>
+<p>
+    🎯 Fun fact ! : I'm possibly the youngest in the room of those born in 2009.
+</p>
+<p>
+    🗒️ There's definitely more that I can say, however, that's up to you to find out >:)
+</p>
 </body>
 </html>
