--- a/contact.me.html
+++ b/contact.me.html
@@ -11,9 +11,20 @@
 </head>
 <h1>Contact Me</h1>
 <body>
-    <p>"Here is how to contact me, and/or who I am to expect."
-        
+    <p>Here is how to contact me, and/or who I am to expect.
     </p>
+    <p>
+    <h3><ins><strong>Contact Me :</strong></p></ins></h3>
+    Phone: +1 123-456-7890
+    </p>
+    <p>Email: aestervil@brooklynsteamcenter.org</p>
+<br>
+    <p>
+        <h3><ins><strong>Your Contact :</strong></p></ins></h3> 
+    </p>
+    Phone: xxx-xxx-xxxx
+    </p>
+    <p>Email: xxx@example.com</p>
     
 </body>
 
