--- a/about-me.html
+++ b/about-me.html
@@ -29,10 +29,12 @@
 <li>Typing</li>
 </ul>
 <p>
-    🎯 Fun fact ! : I'm possibly the youngest in the room of those born in 2009.
+    🎯 Fun fact ! : I'm possibly the youngest in the room of those born in 2009, and I LOVE strawberry shortcakes !!
 </p>
 <p>
     🗒️ There's definitely more that I can say, however, that's up to you to find out >:)
 </p>
+
+<img width=300 src="https://i.pinimg.com/736x/b6/c3/68/b6c3685ca9a258cf39804f9b99d68d1c.jpg">
 </body>
 </html>
