--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Portfolio</h1>
     <p>"My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game."
-        
     </p>
+    <img width="300" src="https://i.pinimg.com/736x/24/73/1d/24731d6e3dbdfeac5b9557d865fa31be.jpg">
 </body>
 </html>
