--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner." 
     </p>
-
+<img width=200 src="https://i.pinimg.com/1200x/06/31/3f/06313fd67c12004bbcc737d9f2976532.jpg">
 </body>
 </html>
