added an image and used a class and id

--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <h1 style="text-align: center">
-    About Me
+  <h1 class="text-center">About Me</h1>
 </h1>  
 <hr>
     <p>
