--- a/contact.me.html
+++ b/contact.me.html
@@ -9,7 +9,8 @@
    
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Contact Me !</h1>
+<h1 id="header1">Contact Me !</h1>
+<hr>
 <body>
     <img width=250 src="https://i.pinimg.com/736x/ed/18/48/ed1848f376bf0b0f0d657b11e7632df5.jpg">
     
