--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <h1>Home</h1>
 <body>
+    <img width=100 src="Screenshot 2026-02-10 at 2.15.14 PM.png" alt="Picture of me">
     <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner." 
     </p>
 <img width=200 src="https://i.pinimg.com/1200x/06/31/3f/06313fd67c12004bbcc737d9f2976532.jpg">
