--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <h1 class="text-center">About Me</h1>
-</h1>  
+  <h1 class= "text-change fancy">About Me</h1>
 <hr>
     <p>
     💼 I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game. Here is how to contact me, and/or who I am to expect.
