--- a/contact.me.html
+++ b/contact.me.html
@@ -27,8 +27,7 @@
     </p>
     Phone: xxx-xxx-xxxx
     </p>
-    <p>Email: xxx@example.com</p>
-    
+    <p>Email: [insert handle here]@[insert server here].com</p>
     
 </body>
 
