--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Home</h1>
+<h1 id="header2">Home</h1>
+
+<hr>
 <body>
     <img width=100 src="Screenshot 2026-02-10 at 2.15.14 PM.png" alt="Picture of me">
     <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner." 
