added nav bar and changed certain viewpoints

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<h1 id="header2">Home</h1>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact-me.html">Contact Me</a>
+</nav>
 
+<h1 id="header1">Home</h1>
 <hr>
+
 <body>
     <img width=100 src="Screenshot 2026-02-10 at 2.15.14 PM.png" alt="Picture of me">
     <p>"I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner." 
     </p>
-<img width=200 src="https://i.pinimg.com/1200x/06/31/3f/06313fd67c12004bbcc737d9f2976532.jpg">
+    <img width=200 src="https://i.pinimg.com/1200x/06/31/3f/06313fd67c12004bbcc737d9f2976532.jpg">
+    <br>
+
+<a href="">Click to see my Resume !</a>
 </body>
 </html>
