--- a/about-me.html
+++ b/about-me.html
@@ -11,8 +11,19 @@
 </head>
 
 <body>
-  <h1 class= "text-change fancy">About Me</h1>
-<hr>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about-me.html">About Me</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact-me.html">Contact Me</a>
+        </nav>
+ 
+    <h1 id= "header1" class="style.change">About Me</h1>
+    <hr>
+
+<img width=590 src="_ (1).jpeg" alt="pretty-flower">
+
+    <hr>
     <p>
     💼 I am a student living in Brooklyn with an interest of becoming either a filmmaker x game designer, or a business owner. My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game. Here is how to contact me, and/or who I am to expect.
     </p>
