--- a/contact-me.html
+++ b/contact-me.html
@@ -9,7 +9,14 @@
    
     <link rel="stylesheet" href="style.css">
 </head>
-<h1 id="header1">Contact Me !</h1>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a class="contact-link" href="contact-me.html">Contact Me</a>
+    </nav>
+
+    <h1 id="header1">Contact Me !</h1>
 <hr>
 <body>
     <img width=250 src="https://i.pinimg.com/736x/ed/18/48/ed1848f376bf0b0f0d657b11e7632df5.jpg">
