--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,17 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about-me.html">About Me</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact-me.html">Contact Me</a>
+</nav>
+
 <body>
-    <h1>Portfolio</h1>
+    <h1 id="header1">Portfolio</h1>
+    <hr>
     <p>"My projects consist of making a website about who I am via Google Sites, making my very own adventure game, and a board game."
     </p>
     <img width="300" src="https://i.pinimg.com/736x/24/73/1d/24731d6e3dbdfeac5b9557d865fa31be.jpg">
